create role, get roles, authentication and authorization

--- a/Petalaka.Account.API/appsettings.json
+++ b/Petalaka.Account.API/appsettings.json
@@ -6,5 +6,16 @@
       "Microsoft.EntityFrameworkCore.Query": "None",
       "Microsoft.EntityFrameworkCore.Database.Command": "None"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost,1434;database=lab1;uid=sa;pwd=Nguyenanhduc2003-;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;Integrated Security=false;Timeout=30;"
+  },
+  "JwtSettings": {
+    "Key": "qwejkqlwjedmnam910238901283iqwencasdasdqwe",
+    "Issuer": "YourAppIssuer",
+    "Audience": "YourAppAudience",
+    "AccessTokenExpiresInMinutes": 30,
+    "RefreshTokenExpiresInMinutes": 60
   }
 }
