--- a/Petalaka.Account.API/appsettings.json
+++ b/Petalaka.Account.API/appsettings.json
@@ -9,7 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=homehost,1435;database=lab1;uid=sa;pwd=Lab!@#123;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;Integrated Security=false;Timeout=30;"
+    "DefaultConnection": "server=schoolhost,1435;database=lab1;uid=sa;pwd=Lab!@#123;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;Integrated Security=false;Timeout=30;"
   },
   "JwtSettings": {
     "Key": "qwejkqlwjedmnam910238901283iqwencasdasdqwe",
